--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,8 @@
 name: be_local_app
-description: "A new Flutter project."
+description: A new Flutter project.
+
 # The following line prevents the package from being accidentally published to
-# pub.dev using `flutter pub publish`. This is preferred for private packages.
+# pub.dev using `pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
@@ -11,46 +12,112 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # build by specifying --build-name and --build-number, respectively.
 # In Android, build-name is used as versionName while build-number used as versionCode.
 # Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number is used as CFBundleVersion.
+# In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-# In Windows, build-name is used as the major, minor, and patch parts
-# of the product and file versions while build-number is used as the build suffix.
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.2.6 <4.0.0'
+  sdk: ">=3.0.0 <4.0.0"
 
-# Dependencies specify other packages that your package needs in order to work.
-# To automatically upgrade your package dependencies to the latest versions
-# consider running `flutter pub upgrade --major-versions`. Alternatively,
-# dependencies can be manually updated by changing the version numbers below to
-# the latest version available on pub.dev. To see which dependencies have newer
-# versions available, run `flutter pub outdated`.
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_localizations:
+    sdk: flutter
+  flutter_web_plugins:
+    sdk: flutter
+  auto_size_text: 3.0.0
+  cached_network_image: 3.4.1
+  cached_network_image_platform_interface: 4.1.1
+  cached_network_image_web: 1.3.1
+  collection: 1.18.0
+  easy_debounce: 2.0.1
+  flutter_animate: 4.5.0
+  flutter_cache_manager: 3.4.1
+  flutter_keyboard_visibility: 6.0.0
+  flutter_keyboard_visibility_linux: 1.0.0
+  flutter_keyboard_visibility_macos: 1.0.0
+  flutter_keyboard_visibility_platform_interface: 2.0.0
+  flutter_keyboard_visibility_web: 2.0.0
+  flutter_keyboard_visibility_windows: 1.0.0
+  font_awesome_flutter: 10.7.0
+  from_css_color: 2.0.0
+  go_router: 12.1.3
+  google_fonts: 6.1.0
+  google_sign_in: 6.2.1
+  google_sign_in_android: 6.1.30
+  google_sign_in_ios: 5.7.7
+  google_sign_in_platform_interface: 2.4.5
+  google_sign_in_web: 0.12.4+2
+  intl: 0.19.0
+  json_path: 0.7.2
+  page_transition: 2.1.0
+  path_provider: 2.1.4
+  path_provider_android: 2.2.10
+  path_provider_foundation: 2.4.0
+  path_provider_linux: 2.2.1
+  path_provider_platform_interface: 2.1.2
+  path_provider_windows: 2.2.1
+  plugin_platform_interface: 2.1.8
+  provider: 6.1.2
+  rxdart: 0.27.7
+  share_plus: 10.0.2
+  share_plus_platform_interface: 5.0.0
+  shared_preferences: 2.3.2
+  shared_preferences_android: 2.3.2
+  shared_preferences_foundation: 2.5.2
+  shared_preferences_linux: 2.4.1
+  shared_preferences_platform_interface: 2.4.1
+  shared_preferences_web: 2.4.2
+  shared_preferences_windows: 2.4.1
+  sign_in_with_apple: 6.1.2
+  sign_in_with_apple_platform_interface: 1.1.0
+  sign_in_with_apple_web: 2.1.0
+  smooth_page_indicator: 1.1.0
+  sqflite: 2.3.3+1
+  sqflite_common: 2.5.4+3
+  stream_transform: 2.1.0
+  timeago: 3.6.1
+  url_launcher: 6.3.0
+  url_launcher_android: 6.3.10
+  url_launcher_ios: 6.3.1
+  url_launcher_linux: 3.2.0
+  url_launcher_macos: 3.2.1
+  url_launcher_platform_interface: 2.3.2
+  url_launcher_web: 2.3.3
+  url_launcher_windows: 3.1.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.0
+
+dependency_overrides:
+  http: 1.2.2
+  uuid: ^4.0.0
 
 dev_dependencies:
+  flutter_launcher_icons: 0.13.1
+  flutter_lints: 4.0.0
+  image: 4.2.0
+  lints: 4.0.0
   flutter_test:
     sdk: flutter
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  remove_alpha_ios: true
+  web:
+    generate: true
+  image_path: 'assets/images/app_launcher_icon.png'
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
-# The following section is specific to Flutter packages.
+# The following section is specific to Flutter.
 flutter:
 
   # The following line ensures that the Material Icons font is
@@ -59,12 +126,19 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+   # - assets/fonts/
+   #assets: - assets/images/
+   #assets: - assets/videos/
+   #assets: - assets/audios/
+   # - assets/rive_animations/
+   # - assets/pdfs/
+   # - assets/jsons/
+
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware
+  # https://flutter.dev/assets-and-images/#resolution-aware.
 
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
@@ -88,3 +162,4 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
