Added animation to splash screen and created sign up page

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -23,7 +23,8 @@ if (flutterVersionName == null) {
 }
 
 android {
-    namespace "com.example.be_local_app"
+  ndkVersion = "25.1.8937393"
+  namespace "com.example.be_local_app"
     compileSdkVersion flutter.compileSdkVersion
     ndkVersion flutter.ndkVersion
 
