--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   plugin_platform_interface: 2.1.8
   provider: 6.1.2
   rxdart: 0.27.7
+  rive: 0.11.11
   share_plus: 10.0.2
   share_plus_platform_interface: 5.0.0
   shared_preferences: 2.3.2
@@ -127,7 +128,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-   # - assets/fonts/
+    - assets/photos/
+    - assets/rive/
    #assets: - assets/images/
    #assets: - assets/videos/
    #assets: - assets/audios/
