--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_keyboard_visibility_platform_interface: 2.0.0
   flutter_keyboard_visibility_web: 2.0.0
   flutter_keyboard_visibility_windows: 1.0.0
+  flutter_riverpod: ^2.0.0
   font_awesome_flutter: ^10.8.0
   from_css_color: 2.0.0
   go_router: ^14.4.1
