--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,15 +42,21 @@ dependencies:
   flutter_keyboard_visibility_web: 2.0.0
   flutter_keyboard_visibility_windows: 1.0.0
   flutter_riverpod: ^2.0.0
+  flutter_google_places_hoc081098: 2.0.0
   font_awesome_flutter: ^10.8.0
   from_css_color: 2.0.0
   go_router: ^14.4.1
+  google_api_headers: 4.0.3
   google_fonts: ^6.2.1
   google_sign_in: ^6.2.2
   google_sign_in_android: ^6.1.33
   google_sign_in_ios: ^5.7.8
   google_sign_in_platform_interface: 2.4.5
   google_sign_in_web: ^0.12.4+3
+  google_maps_flutter: ^2.2.3
+  google_maps_webservice: ^0.0.20-nullsafety.5
+  geocoding: ^2.0.1
+  geolocator: ^9.0.2
   intl: 0.19.0
   json_path: ^0.7.4
   mongo_dart: ^0.9.1
